# conservation-languages

./: .gitignore  BENCHMARK.md  CHAPEL_RUST_SYNERGY.md  CROSS-POLLINATION.md  PAPER.md  PERFORMANCE_STUDY.md  README.md  ZERO_ALLOC_SHOWDOWN.md  benchmark_all.py  benchmark_results.json  k_sweep_experiment.py  k_sweep_results.json
c/: zero_alloc  zero_alloc_benchmark.c  zero_alloc_omp.c
chapel/: conservation.chpl
cobol/: CONSERVATION.cbl
elixir/: mix.exs
elixir/bench/: runner.exs
elixir/lib/: conservation.ex  fleet_agent.ex  fleet_supervisor.ex
fortran/: conservation.f90
julia/: conservation.jl  optimized.jl  zero_alloc_benchmark.jl
matlab/: conservation_law.m
r/: conservation_law.R
rust/: zero_alloc_benchmark.rs
rust_ffi/: Cargo.toml
rust_ffi/src/: lib.rs
rust_zero/: Cargo.toml
rust_zero/src/: main.rs
